<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.calbaptist.android.projectmeetings.MeetingListActivity">

    <Button
        android:id="@+id/CreateMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createMeeting" />

    <TextView
        android:id="@+id/Invites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invites"
        android:layout_below="@id/CreateMeeting"/>

    <!--<fragment-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"/>-->

    <TextView
        android:id="@+id/currentMeetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_meetings"
        android:layout_below="@id/Invites"/>

    <!--<fragment-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    <TextView
        android:id="@+id/upcomingMeetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_meetings"
        android:layout_below="@id/currentMeetings"/>

    <!--<fragment-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    <TextView
        android:id="@+id/PastMeetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/past_meetings"
        android:layout_below="@id/upcomingMeetings"/>

    <!--<fragment-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"/>-->


</RelativeLayout>