<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edit_text_meeting_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_name"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/edit_text_meeting_objective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meeting_objective"
            android:inputType="text"
            android:layout_below="@id/edit_text_meeting_name"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:maxLines="1"/>

        <LinearLayout
            android:id="@+id/edit_meeting_button_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_meeting_objective"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp">
            <Button
                android:id="@+id/button_date_picker"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="Date"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/button_drive_folder"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="Invalid Folder"
                style="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_meeting_button_row"
            android:layout_centerHorizontal="true"
            android:text="Length (in minutes):"
            android:textSize="15dp"/>

        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_time_picker"
            android:layout_centerHorizontal="true" />

        <EditText
        android:id="@+id/edit_text_add_invites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Invite by email (seperate by commas)"
        android:inputType="text"
        android:layout_below="@id/number_picker"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/edit_text_remove_invites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Uninvite by email (seperate by commas)"
            android:inputType="text"
            android:layout_below="@id/edit_text_add_invites"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/edit_text_remove_invites"
            android:layout_margin="20dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_submit"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:layout_margin="10dp"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>
